--- a/game.css
+++ b/game.css
@@ -46,7 +46,7 @@ br{
 #semi-body{
     display: none;
     flex-direction: row;
-    padding: 30px
+    padding: 30px;
 }
 #game-table{
     padding: 50px;
@@ -66,18 +66,18 @@ br{
 #btnDiv{
     padding-left: 100px;
     padding-right: 100px;
-    width: 130px;
-    height: 60px;
 }
 #restartGameBtn{
     display: flex;
     color: rgba(192, 185, 191, 0.877);
-    font-size: 25px;
+    font-size: 15px;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     font-weight: bold;
-    margin: 30px;
+    width: 130px;
+    height: 60px;
+    margin-left: 30px;
+    margin-right: 30px;
     border: 8px rgba(192, 185, 191, 0.877) ridge; 
-    /* text-transform: uppercase; */
     padding: 10px;
     justify-content: center;
     align-items: center;
@@ -117,7 +117,9 @@ br{
     font-size: 25px;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     font-weight: bold;
-    margin: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 30px;
     text-transform: uppercase;
     padding: 10px;
     justify-content: center;
