--- a/game.css
+++ b/game.css
@@ -49,12 +49,12 @@ br{
     padding: 30px;
 }
 #game-table{
-    padding: 50px;
+    padding: 20px;
     background-color: rgba(81, 78, 80, 0.249);
     display: flex;
     flex-wrap: wrap;
-    width: 700px;
-    gap: 50px;
+    width: 720px;
+    gap: 20px;
     justify-content: center;
     align-items: center;
     border: 8px rgba(192, 185, 191, 0.877) ridge;          
@@ -69,6 +69,7 @@ br{
 }
 #restartGameBtn{
     display: flex;
+    position: sticky;
     color: rgba(192, 185, 191, 0.877);
     font-size: 15px;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
@@ -100,8 +101,8 @@ br{
 .card{
     display: flex;
     position: relative;
-    width: 120px;
-    height: 120px;
+    width: 100px;
+    height: 100px;
     background-color: rgb(167, 163, 165);
     justify-content: center;
     align-items: center;
