--- a/game.css
+++ b/game.css
@@ -1,13 +1,13 @@
 body{
-    background-color:rgba(192, 185, 191, 0.877);
     display: flex;
-    justify-content: center;
-    padding: 100px;
-    align-items: center;
+    flex-direction: column;
+    background-color:rgba(192, 185, 191, 0.877);
     background-image: url('background1.webp');
     background-size: 2000px;
-    flex-direction: column;
     font-size: 100%;
+    padding: 100px;
+    justify-content: center;
+    align-items: center;
 }
 h1{
     position: absolute;
@@ -88,6 +88,7 @@ br{
     background-color: rgb(162, 161, 160);
     border: 8px rgba(192, 185, 191, 0.877) ridge; 
     padding: 100px;
+    margin-top: 100px;
     text-transform: uppercase;
     font-size: 30px;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
